--- a/asp_hw_2/Templates/login.html
+++ b/asp_hw_2/Templates/login.html
@@ -1,9 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Login page</title>
-    <style>
+﻿<style>
         * {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
@@ -39,8 +34,7 @@
 
         }
     </style>
-</head>
-<body>
+<h1>{title}</h1>
     <form method="post" action="/login">
         <div class="error">{error}</div>
         <p>Username</p>
@@ -50,5 +44,3 @@
         <button>Log in</button>
         <a href="/register">Register page</a>
     </form>
-</body>
-</html>
