--- a/asp_hw_2/Templates/register.html
+++ b/asp_hw_2/Templates/register.html
@@ -1,9 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Login page</title>
-    <style>
+﻿<style>
         *{
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
@@ -41,8 +36,8 @@
             padding: 10px;
         }
     </style>
-</head>
-<body>
+
+<h1>{title}</h1>
     <form method="post" action="/register">
         <div class="error">{error}</div>
         <p>Name</p>
@@ -54,5 +49,3 @@
         <button>Register</button>
         <a href="/login">Log in page</a>
     </form>
-</body>
-</html>
